--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     }
   },
   "dependencies": {
+    "@nestjs/cli": "^10.3.0",
     "@nestjs/common": "7.5.1",
     "@nestjs/core": "7.5.1",
     "@nestjs/passport": "7.1.0",
